# ga-python

./: .gitignore  Makefile  main.py  pyproject.toml  tests.py  zandbox.py
.github/workflows/: archivo.yml  main.yml
